--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,10 @@
             <groupId>org.springframework.cloud</groupId>          
             <artifactId>spring-cloud-gcp-starter-data-datastore</artifactId>
         </dependency>
-
+        <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-gcp-pubsub</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -65,3 +68,4 @@
 	</build>
 
 </project>
+
